css/style.css
/* ... */
.work-box:hover img {
  -webkit-transform: scale(1.3);
  transform: scale(1.3);
}

.work-img {
  display: block;
  overflow: hidden;
}

.work-img img {
  transition: all 1s;
}

.work-content {
  padding: 2rem 3% 1rem 4%;
}

.work-content .w-more {
  color: #4e4e4e;
  font-size: 0.8rem;
}

.work-content .w-more .w-ctegory {
  color: var(--primary-color);
}



.work-content .w-like a {
  color: var(--primary-color);
}

.work-content .w-like .num-like {
  font-size: 0.7rem;
}

.w-title {
  font-size: 1.2rem;
}


.footer-paralax {
  padding: 4rem 0 0 0;
}

.contact-mf {
  margin-top: 4rem;
}

/*======================================
//--//-->   FOOTER
======================================*/

footer {
  text-align: center;
  color: #fff;
  padding-bottom: 4rem;
}

footer .copyright {
  margin-bottom: 0.3rem;
}

footer .credits {
  margin-bottom: 0;
}

footer .credits a {
  color: #fff;
}

/*======================================
//--//-->   CONtaCT FORM
======================================*/

#sendmessage {
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  display: none;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

#errormessage {
  color: red;
  display: none;
  border: 1px solid red;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

#sendmessage.show,
#errormessage.show,
.show {
  display: block;
}

.validation {
  color: red;
  display: none;
  margin: 0 0 20px;
  font-weight: 400;
  font-size: 13px;
}

/*======================================
//--//-->   BUTTON
======================================*/

.button {
  display: inline-block;
  padding: 0.3rem 0.6rem;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1rem;
  border-radius: 0.3rem;
  border: 1px solid transparent;
  transition: all 500ms ease;
  cursor: pointer;
}

.button:focus {
  outline: 0;
}

.button:hover {
  background-color: #0062d3;
  color: #fff;
  transition: all 500ms ease;
}

.button-a {
  background-color: var(--primary-color);
  color: #fff;
  border-color: #cde1f8;
}

.button-big {
  padding: 0.9rem 2.3rem;
  font-size: 1.2rem;
}

.button-rouded {
  border-radius: 5rem;
}



@media (min-width: 577px) {
  .counter-box {
    margin-bottom: 1.8rem;
  }
}

@media (min-width: 767px) {
  .about-mf .box-pl2 {
    margin-top: 3rem;
    padding-left: 0rem;
  }
  .card-blog {
    margin-bottom: 3rem;
  }
  .contact-mf .box-pl2 {
    margin-top: 3rem;
    padding-left: 0rem;
  }
}

@media (min-width: 768px) {
  .box-shadow-full {
    padding: 3rem;
  }
  .navbar-b.navbar-trans .nav-item,
  .navbar-b.navbar-reduce .nav-item {
    padding-left: 10px;
  }
  .navbar-b.navbar-trans .nav-link:before,
  .navbar-b.navbar-reduce .nav-link:before {
    margin-left: 18px;
  }
  .intro .intro-title {
    font-size: 4.5rem;
  }
  .intro .intro-subtitle {
    font-size: 2.5rem;
  }

}

span.material-icons {
  padding: 8px;
  position: relative;
  top: 8px;
  border-radius: 50%;
  background-color: var(--primary-color);
  color: white;
  margin-right: 16px;
  margin-bottom: 10px;
}

@media (min-width: 992px) {
  .testimonial-box .description {
    padding: 0 8rem;
  }
}

@media (min-width: 1200px) {
  .testimonial-box .description {
    padding: 0 13rem;
  }
}

@media (max-width: 1024px) {
  .bg-image {
    background-attachment: scroll;
  }
}

@media (max-width: 768px) {
  .back-to-top {
    bottom: 15px;
  }
}


/* Card Box */

.u-card {
  box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.2), 0 1px 8px 0 rgba(0,0,0,.12);
  padding: 30px;
  margin: 30px 5px;
  border-radius: 10px;
  background-color: white;
}


/* Company Logo */
img.u-thumb-img {
  margin: 8px;
  width: 40px;
  height: 40px;
  object-fit: contain;
  box-shadow: 0 0 20px 5px #42424217;
  background-color: white;
}

/* Experience Card */

.u-rounded-gray-bg {
  background-color: #eeeeee60;
  padding: 8px;
  border-radius: 30px;
}

.u-align-center {
  display: flex;
  align-items: center;
}

.u-neumorphism-shadow {
  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.2),
   -8px -8px 12px 0 rgba(255, 255, 255, 0.2);
}

#u-form-pop-up {
  position: fixed;
  right: 0px;
  left: 0;
  bottom: 20px;
  background-color: white;
  z-index: 99;
  padding: 25px;
  text-align: center;
  max-width: 700px;
  transition: 0.5s;
  border-radius: 10px;
  box-shadow: 0 0 10px 5px #55555555;
  margin: auto;
}

/* css for mobile, tab devices */

@media (max-width: 991px) {
  .u-hide-on-mobile {
    display: none !important;
  }
}
/* css for pc */
@media (min-width: 992px) {
  .u-show-on-mobile-only {
      display: none !important;
  }
}

/* mobile style nav */

@media (max-width: 992px) {
  .navbar-collapse {
      position: absolute;
      top: 65px;
      left: 100%;
      margin-left: 50%;
      background-color: #ffffff;
      padding: 15px;
      width: 100%;
      height: 1000px;
      transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
      display: block;
  }
  .navbar-collapse.collapsing {
      height: auto !important;
      margin-left: 50%;
      transition: all 0.3s ease;
      display: block;
  }
  .navbar-collapse.show {
      left: 0;
  }
}

